git-challenge/scss/git-challenge.scss
/* Freetail Colors */
$freetailBlueHighlight  : #73A8B8;
$freetailRed            : #E45243;
$freetailOrange         : #EA863B;
$freetailOrangeHighlight: #F9A027;
$freetailBlue           : #124E78;
$gitChallengeKhaki      : #E0D1B8;

$dark: #002db3;
$light: #009999;
$sans-serif-font: 'Josefin Sans', sans-serif;
@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,100,100italic,300,300italic,400italic,600,600italic,700,700italic);

* {
	font-family: $sans-serif-font;
}

.img-responsive {
	margin: 0 auto;
}

html {
	min-height: 100%;
	position: relative;
}

body {
	color: $gitChallengeKhaki !important;

	::-webkit-input-placeholder { /* WebKit browsers */
		font-family: $sans-serif-font;
			color:    white;
		font-weight: 300;
	}
	:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
		font-family: $sans-serif-font;
		 color:    white;
		 opacity:  1;
		font-weight: 300;
	}
	::-moz-placeholder { /* Mozilla Firefox 19+ */
		font-family: $sans-serif-font;
		 color:    white;
		 opacity:  1;
		font-weight: 300;
	}
	:-ms-input-placeholder { /* Internet Explorer 10+ */
		font-family: $sans-serif-font;
		 color:    white;
		font-weight: 300;
	}

	a {
		font-weight: 600;
		color: $gitChallengeKhaki;
		&:hover {
			color: rgba($gitChallengeKhaki, 0.8);
			text-decoration: none;
		}
	}
}

.header {
	margin-top: 100px;
}

.center {
	text-align: center;
	margin: 0 auto;
}

body {
	background: $dark;
	background: -webkit-linear-gradient(top left, $freetailBlue 0%, $freetailRed 100%);
	background: -moz-linear-gradient(top left, $freetailBlue 0%, $freetailRed 100%);
	background: -o-linear-gradient(top left, $dark 0%, $light 100%);
	background: linear-gradient(to bottom right, $freetailBlue 0%, $freetailRed 100%);
	background-size: auto 100%;
	background-repeat: no-repeat;
	background-position: center;
	margin-bottom: 66px;
}

footer {

	position: absolute;
	bottom: 0;
	/* Set the fixed height of the footer here */
	height: 60px;
	width: 100%;

	.container p {
//	margin: 20px 0;
		margin: 0 auto;
		width: 50%;
	}
}

/* Spinner */
.loader {
	font-size: 10px;
	margin: 0 auto;
	text-indent: -9999em;
	width: 2.5em;
	height: 2.5em;
	border-radius: 50%;
	background: #12628b;
	background: -moz-linear-gradient(left, #12628b 10%, rgba(18,98,139, 0) 42%);
	background: -webkit-linear-gradient(left, #12628b 10%, rgba(18,98,139, 0) 42%);
	background: -o-linear-gradient(left, #12628b 10%, rgba(18,98,139, 0) 42%);
	background: -ms-linear-gradient(left, #12628b 10%, rgba(18,98,139, 0) 42%);
	background: linear-gradient(to right, #12628b 10%, rgba(18,98,139, 0) 42%);
	position: relative;
	-webkit-animation: load3 1.4s infinite linear;
	animation: load3 1.4s infinite linear;
	-webkit-transform: translateZ(0);
	-ms-transform: translateZ(0);
	transform: translateZ(0);
	&:before {
		width: 50%;
		height: 50%;
		background: #12628b;
		border-radius: 100% 0 0 0;
		position: absolute;
		top: 0;
		left: 0;
		content: '';
	}
	&:after {
		background: #ffffff;
		width: 75%;
		height: 75%;
		border-radius: 50%;
		content: '';
		margin: auto;
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
	}
}

@-webkit-keyframes load3 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load3 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}



form {
	input {
		&[type='email'], &[type='text'], &[type='url'] {
			-webkit-appearance: none;
			-moz-appearance: none;
			appearance: none;
			outline: 0;
			border: 1px solid rgba(255, 255, 255, 0.4);
			background-color: rgba(255, 255, 255, 0.2);
			width: 100%;
			border-radius: 3px;
			padding: 10px 15px;
			margin: 0 auto 10px auto;
			display: block;
			text-align: center;
			font-size: 18px;
			color: white;
			-webkit-transition-duration: 0.25s;
			transition-duration: 0.25s;
			font-weight: 300;
			transition-duration: 0.25s;
			font-weight: 300;
			&::selection {
				color: white;
			  background: rgba($freetailBlue, 0.75); /* WebKit/Blink Browsers */
			}
			::-moz-selection {
			  background: #000; /* Gecko Browsers */
			}
			&:hover {
				background-color: rgba(255, 255, 255, 0.4);
			}

			&:focus {
				background-color: white;
				color: $freetailBlue;
			}
		}
	}

	select {
		-webkit-appearance: none;
		-moz-appearance: none;
		appearance: none;
		outline: 0;
		margin-bottom: 10px;
		border: 1px solid rgba(255, 255, 255, 0.4);
		background-color: rgba(255, 255, 255, 0.2);
		width: 100%;
		padding: 5px 35px 5px 5px;
		font-size: 16px;
		height: 34px;
	}

	button {
		text-align: center;
		appearance: none;
		outline: 0;
		background-color: white;
		border: 0;
		padding: 10px 15px;
		color: $freetailBlue;
		border-radius: 3px;
		width: 250px;
		cursor: pointer;
		font-size: 18px;
		transition-duration: 0.25s;
		margin: 0 auto 10px auto;
		#submit-button {
		display: block;
		}
		&:hover{
			background-color: rgb(245, 247, 249);
			&.submitted {
				background-color: white;
			}
		}
		&.selected {
			background-color: $freetailBlue;
			color: white;
		}
	}
}

